--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "(rm -fr gh-pages || true) && react-scripts build && mv build gh-pages",
+    "build": "(rm -fr docs || true) && react-scripts build && mv build docs",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
