--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ebnf-highlighter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://menduz.com/ebnf-highlighter",
   "devDependencies": {
     "react-scripts": "0.6.1"
   },
